<?xml version="1.0" encoding="UTF-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage
        statistics. You may need to enable access
        for this app through Settings > Security > Apps with usage access
    </string>
    <string name="server_ip_address">services.tablumen.com:3000/</string>
    <string name="server_ip_address_test">192.168.1.5:3000/</string>

    <string name="package_name_placeholder">Package Name</string>
    <string name="last_time_used_placeholder">12/31/1970 23:59:59 123456</string>
    <string name="app_name">Kidappolis</string>
    <string name="loading_placeholder">Loading…</string>
    <string name="never_synced_message">Did not sync yet.</string>
    <string name="loading_data_message">Loading data…</string>
    <string name="wifi_only_text">WiFi only</string>
    <string name="check_button_text">Check</string>
    <string name="sync_text">sync</string>
    <string name="unsynced_message">Cannot get unsynced records</string>
    <string name="get_permissions_text">Get Permission</string>
    <string name="sync_page_count">Sync page count</string>
    <string name="update_count">Update</string>
    <string name="update_page_count">Update page count</string>
    <string name="broadcast_action">com.lumen.action_collection</string>
    <string name="choose_unique_id">Choose unique id</string>
    <string name="id">id…</string>
    <string name="ok">OK</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="zip">Zip</string>
    <string name="child_first_name">Child first name</string>
    <string name="child_last_name">Child last name</string>
    <string name="child_birth_date">Child birth date</string>
    <string name="agree_to_terms">Agree to</string>
    <string name="register">Register</string>

    <string name="label_settings">Settings</string>

    <string name="permission_text">Kidappolis requests that you grant permission to collect usage data
        on this device in order to provide you with better service and personalized information
        about your child\'s interaction with our apps.\n\n
        Kidappolis only collects data on the specific educational apps that we recommend here.
        Please click on the Enable Permission button below and then click on "Kidappolis"
        in the screen that pops up in order to grant permission.</string>

    <string name="enable_permission">enable permission</string>
    <string name="action_settings">Settings</string>
    <string name="child_level">Child level</string>
    <string name="already_registered">Already registered ?</string>
    <string name="click_here">click here</string>
    <string name="parent_email">Parent email (optional)</string>
    <string name="teacher_name">Teacher name</string>
    <string name="school_name">School name</string>
    <string name="school_district">School district</string>
    <string name="phone_or_id">Phone or ID</string>
    <string name="login">Login</string>
    <string name="register_gender">Gender</string>
    <string name="settings_permission_title">Usage statistics permission:</string>
    <string name="settings_unsynced_title">Un-synced records remaining:</string>
    <string name="settings_api_available">Api status: available</string>
    <string name="ssettings_api_not_available">Api status: not available</string>
    <string name="settings_api_not_available_offline">Api status: not available or offline</string>
    <string name="terms">terms</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
