<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/content"
    android:visibility="invisible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_unique_id"
            android:textColor="@android:color/black"
            android:textSize="28sp"/>

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:hint="@string/id"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/ok" />


    </RelativeLayout>



</LinearLayout>