<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kidappolis.usage.satistics.SettingsActivity"
    tools:showIn="@layout/activity_dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/phone"
            style="@style/DashboardTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/version_tv"
            style="@style/DashboardTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/last_sync_tv"
                style="@style/DashboardTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="last_sync_tv" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/sync_data"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sync_text" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/remaining_records_tv"
            style="@style/DashboardTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="remaining_records_tv" />

        <View
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/api_available_tv"
                style="@style/DashboardTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="api_available_tv" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/check_api"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/check_button_text" />

                <Switch
                    android:id="@+id/wifiSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:text="@string/wifi_only_text" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/permission_granted_tv"
            style="@style/DashboardTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="permission_granted_tv" />

        <Button
            android:id="@+id/get_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/get_permissions_text" />

        <View
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <EditText
            android:id="@+id/edit_page_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/update_page_count"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/update_page_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/update_count" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />
    </LinearLayout>
</ScrollView>